--- a/5-sinif.html
+++ b/5-sinif.html
@@ -166,7 +166,7 @@
                     
                     <!-- BTY.5.1.1 -->
                     <div id="t1-k1" class="content-panel">
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Ders Sunusu (PDF)</span></a>
+                        <a href="https://drive.google.com/file/d/1FngMGa1Z8N0f7P7YnfloXPosgVPT1V0y/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Ders Sunusu (PDF)</span></a>
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Bilişim Araçları Posteri</span></a>
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-clipboard-question text-green-400 w-8 text-center"></i><span class="text-sm">Kazanım Testi</span></a>
                         <a href="#" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Konu Anlatım Videosu</span></a>
