--- a/5-sinif.html
+++ b/5-sinif.html
@@ -126,7 +126,7 @@
 
                 <!-- KONU 1 İÇERİKLERİ -->
                 <div id="t1-k1" class="content-panel">
-                    <a href="https://drive.google.com/..." target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-6"></i><span class="text-sm ml-2">Ders Sunusu</span></a>
+                    <a href="https://drive.google.com/file/d/1FngMGa1Z8N0f7P7YnfloXPosgVPT1V0y/view?usp=drive_link" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-6"></i><span class="text-sm ml-2">Ders Sunusu</span></a>
                     <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-6"></i><span class="text-sm ml-2">İnfografik</span></a>
                     <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-clipboard-question text-green-400 w-6"></i><span class="text-sm ml-2">Test</span></a>
                     <a href="#" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-6"></i><span class="text-sm ml-2">Video</span></a>
