--- a/5-sinif.html
+++ b/5-sinif.html
@@ -113,6 +113,8 @@
                     <a href="5-sinif.html" class="text-pink-400 font-bold border-b-2 border-pink-400 pb-1">5. Sınıf</a>
                     <a href="6-sinif.html" class="text-gray-400 hover:text-white hover:scale-105 transition">6. Sınıf</a>
                     <a href="#" class="text-gray-400 hover:text-white hover:scale-105 transition">Yapay Zekâ</a>
+                    <a href="#" class="text-gray-300 hover:text-white hover:scale-105 transition">Robotik Kodlama</a>
+                    <a href="#" class="block py-3 px-4 text-gray-300 hover:bg-white/5 hover:text-white transition">İletişim</a>
                 </div>
             </div>
         </div>
