--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             <a href="6-sinif.html" class="block py-3 px-4 text-gray-300 hover:bg-white/5 hover:text-white transition">6. Sınıf BTY</a>
             <a href="#" class="block py-3 px-4 text-gray-300 hover:bg-white/5 hover:text-white transition">Yapay Zekâ Atölyesi</a>
             <a href="#" class="block py-3 px-4 text-gray-300 hover:bg-white/5 hover:text-white transition">İletişim</a>
+            <a href="ogretmen.html" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-full transition shadow-lg shadow-pink-500/30">
+    Öğretmen Paneli
+</a>
         </div>
     </nav>
 
