--- a/evraklar.html
+++ b/evraklar.html
@@ -106,6 +106,7 @@
                     </a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
+                    <a href="index.html" class="text-pink-400 font-bold border-b-2 border-pink-400 pb-1">Anasayfa</a>
                      <a href="5-sinif.html" class="text-pink-400 font-bold border-b-2 border-pink-400 pb-1">5. Sınıf</a>
                     <a href="6-sinif.html" class="text-gray-400 hover:text-white hover:scale-105 transition">6. Sınıf</a>
                     <a href="#" class="text-gray-400 hover:text-white hover:scale-105 transition">Yapay Zekâ</a>
