--- a/yapay-zeka.html
+++ b/yapay-zeka.html
@@ -76,6 +76,9 @@
                     <a href="6-sinif.html" class="text-gray-400 hover:text-white hover:scale-105 transition">6. Sınıf</a>
                     <!-- AKTİF SAYFA -->
                     <a href="yapay-zeka.html" class="text-indigo-400 font-bold border-b-2 border-indigo-400 pb-1">Yapay Zekâ</a>
+                    <a href="#" class="text-gray-300 hover:text-white hover:scale-105 transition">Robotik Kodlama</a>
+                    <a href="evraklar.html" class="text-gray-300 hover:text-white hover:scale-105 transition">Evraklar</a>
+                    <a href="#" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-full transition shadow-lg shadow-pink-500/30">İletişim</a>
                 </div>
             </div>
         </div>
