--- a/5-sinif.html
+++ b/5-sinif.html
@@ -202,7 +202,7 @@
                     <span class="text-xs font-bold tracking-widest text-purple-400 uppercase border border-purple-400/20 px-2 py-1 rounded bg-purple-400/5">Tema 2</span>
                     <i class="fa-solid fa-pen-ruler text-purple-300 text-2xl"></i>
                 </div>
-                <h2 class="text-xl font-bold text-white mb-6">Dijital Ürün Tasarımı</h2>
+                <h2 class="text-xl font-bold text-white mb-6">Dijital Ürün Tasarımı ve Geliştirme</h2>
 
                 <div class="mb-4">
                     <select onchange="showContent('tema2', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
@@ -347,7 +347,7 @@
                     <span class="text-xs font-bold tracking-widest text-yellow-400 uppercase border border-yellow-400/20 px-2 py-1 rounded bg-yellow-400/5">Tema 6</span>
                     <i class="fa-solid fa-code text-yellow-300 text-2xl"></i>
                 </div>
-                <h2 class="text-xl font-bold text-white mb-6">Yazılım Tasarımı</h2>
+                <h2 class="text-xl font-bold text-white mb-6">Yazılım Tasarımı ve Programlama</h2>
 
                 <div class="mb-4">
                     <select onchange="showContent('tema6', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
