--- a/6-sinif.html
+++ b/6-sinif.html
@@ -142,7 +142,7 @@
                     <span class="text-xs font-bold tracking-widest text-teal-400 uppercase border border-teal-400/20 px-2 py-1 rounded bg-teal-400/5">Tema 1</span>
                     <i class="fa-solid fa-rocket text-teal-300 text-2xl"></i>
                 </div>
-                <h2 class="text-xl font-bold text-white mb-6">Yenilikçi Teknolojiler</h2>
+                <h2 class="text-xl font-bold text-white mb-6">Bilişim Teknolojilerinin Hayatımızdaki Yeri (Yenilikçi Teknolojiler)</h2>
 
                 <div class="mb-4">
                     <select onchange="showContent('tema1', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
@@ -171,12 +171,12 @@
             </div>
 
             <!-- 2. TEMA KARTI (Yoğun İçerik) -->
-            <div class="glass-card rounded-2xl p-6 flex flex-col hover:border-cyan-500/30 transition duration-500 lg:col-span-2">
+            <div class="glass-card rounded-2xl p-6 flex flex-col hover:border-cyan-500/30 transition duration-500">
                 <div class="flex items-center justify-between mb-4">
                     <span class="text-xs font-bold tracking-widest text-cyan-400 uppercase border border-cyan-400/20 px-2 py-1 rounded bg-cyan-400/5">Tema 2</span>
                     <i class="fa-solid fa-layer-group text-cyan-300 text-2xl"></i>
                 </div>
-                <h2 class="text-xl font-bold text-white mb-6">Dijital Ürün Tasarımı (Veri, Ses, Video)</h2>
+                <h2 class="text-xl font-bold text-white mb-6">Dijital Ürün Tasarımı ve Geliştirme (Veri, Ses, Video)</h2>
 
                 <div class="mb-4">
                     <select onchange="showContent('tema2', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
@@ -393,7 +393,7 @@
                     <span class="text-xs font-bold tracking-widest text-yellow-400 uppercase border border-yellow-400/20 px-2 py-1 rounded bg-yellow-400/5">Tema 6</span>
                     <i class="fa-solid fa-code text-yellow-300 text-2xl"></i>
                 </div>
-                <h2 class="text-xl font-bold text-white mb-6">Yazılım Tasarımı</h2>
+                <h2 class="text-xl font-bold text-white mb-6">Yazılım Tasarımı ve Programlama</h2>
 
                 <div class="mb-4">
                     <select onchange="showContent('tema6', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
