--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- HERO SLIDER -->
     <header class="slider-container">
         <!-- Slide 1: Kodlama ve Eğitim (Güncellendi) -->
-        <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1546410531-bb4caa6b424d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');">
+        <div class="slide active" style="background-image: url(img/slider1.jpg);">
             <div class="slide-content px-4">
                 <div class="max-w-4xl mx-auto animate-fade-in">
                     <div class="inline-block bg-white/10 backdrop-blur-sm border border-white/20 px-4 py-1 rounded-full text-sm font-semibold mb-6 text-pink-300">
@@ -179,7 +179,7 @@
         </div>
 
         <!-- Slide 2: Robotik ve YZ (Güncellendi) -->
-        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');">
+        <div class="slide" style="background-image: url('img/slider2.jpg');">
             <div class="slide-content px-4">
                 <div class="max-w-4xl mx-auto animate-fade-in">
                     <div class="inline-block bg-blue-500/30 backdrop-blur-sm border border-blue-400/30 px-4 py-1 rounded-full text-sm font-semibold mb-6 text-blue-200">
@@ -224,7 +224,7 @@
                 <div class="glass-card rounded-3xl overflow-hidden flex flex-col group">
                     <div class="card-image-container bg-gray-800">
                         <!-- Güvenli Görsel -->
-                        <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="img/kart1.jpg" 
                              alt="Dersler" class="w-full h-full object-cover opacity-80"
                              onerror="this.src='https://placehold.co/800x600/1f2937/FFFFFF?text=Ders+Materyalleri'">
                         <div class="image-overlay"></div>
@@ -250,7 +250,7 @@
                 <div class="glass-card rounded-3xl overflow-hidden flex flex-col group">
                     <div class="card-image-container bg-gray-800">
                         <!-- Güvenli Görsel -->
-                        <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="img/kart2.jpg" 
                              alt="Robotik" class="w-full h-full object-cover opacity-80"
                              onerror="this.src='https://placehold.co/800x600/1f2937/FFFFFF?text=Robotik+Kodlama'">
                         <div class="image-overlay"></div>
@@ -281,7 +281,7 @@
                 <div class="glass-card rounded-3xl overflow-hidden flex flex-col group">
                     <div class="card-image-container bg-gray-800">
                         <!-- Güvenli Görsel -->
-                        <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="img/kart3.jpg" 
                              alt="Yapay Zeka" class="w-full h-full object-cover opacity-80"
                              onerror="this.src='https://placehold.co/800x600/1f2937/FFFFFF?text=Yapay+Zeka'">
                         <div class="image-overlay"></div>
@@ -306,7 +306,7 @@
                 <div class="glass-card rounded-3xl overflow-hidden flex flex-col group">
                     <div class="card-image-container bg-gray-800">
                         <!-- Güvenli Görsel -->
-                        <img src="https://images.unsplash.com/photo-1550684848-fac1c5b4e853?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="img/kart4.jpg" 
                              alt="Sergi" class="w-full h-full object-cover opacity-80"
                              onerror="this.src='https://placehold.co/800x600/1f2937/FFFFFF?text=Sanal+Sergi'">
                         <div class="image-overlay"></div>
@@ -331,7 +331,7 @@
                 <div class="glass-card rounded-3xl overflow-hidden flex flex-col group">
                     <div class="card-image-container bg-gray-800">
                         <!-- Güvenli Görsel -->
-                        <img src="https://images.unsplash.com/photo-1555601568-c916f54b1046?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="img/evrakdosyasi.jpg" 
                              alt="Evraklar" class="w-full h-full object-cover opacity-80"
                              onerror="this.src='https://placehold.co/800x600/1f2937/FFFFFF?text=Ogretmen+Dosyasi'">
                         <div class="image-overlay"></div>
@@ -356,7 +356,7 @@
                  <div class="glass-card rounded-3xl overflow-hidden flex flex-col group">
                     <div class="card-image-container bg-gray-800">
                         <!-- Güvenli Görsel -->
-                        <img src="https://images.unsplash.com/photo-1587560699334-cc4da63c2449?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="img/iletisim.jpg" 
                              alt="İletişim" class="w-full h-full object-cover opacity-80"
                              onerror="this.src='https://placehold.co/800x600/1f2937/FFFFFF?text=Iletisim'">
                         <div class="image-overlay"></div>
