--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <a href="yapay-zeka.html" class="text-gray-300 hover:text-white hover:scale-105 transition">Yapay Zekâ</a>
                     <a href="robotik.html" class="text-gray-300 hover:text-white hover:scale-105 transition">Robotik Kodlama</a>
                     <a href="evraklar.html" class="text-gray-300 hover:text-white hover:scale-105 transition">Evraklar</a>
+                    <a href="#" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-full transition shadow-lg shadow-pink-500/30">İletişim</a>
                 </div>
                 <div class="md:hidden flex items-center">
                     <button id="mobile-menu-btn" class="text-gray-300 hover:text-white focus:outline-none"><i class="fa-solid fa-bars text-2xl"></i></button>
