--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             <a href="yapay-zeka.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">Yapay Zekâ</a>
             <a href="robotik.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">Robotik Kodlama</a>
             <a href="evraklar.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">Evraklar</a>
+            <a href="iletisim.html" class="block py-3 px-4 bg-pink-600 hover:bg-pink-500 text-white text-center rounded-b-lg transition">İletişim</a>
         </div>
     </nav>
 
