--- a/evraklar.html
+++ b/evraklar.html
@@ -111,8 +111,8 @@
                     <a href="6-sinif.html" class="text-gray-400 hover:text-white hover:scale-105 transition">6. Sınıf</a>
                     <a href="yapay-zeka.html" class="text-gray-400 hover:text-white hover:scale-105 transition">Yapay Zekâ</a>
                     <a href="#" class="text-gray-300 hover:text-white hover:scale-105 transition">Robotik Kodlama</a>
-                     <a href="evraklar.html" class="text-pink-400 font-bold border-b-2 border-pink-400 pb-1">Evraklar</a>
-                    <a href="#" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-full transition shadow-lg shadow-pink-500/30">İletişim</a>
+                     <a href="evraklar.html" class="text-blue-400 font-bold border-b-2 border-blue-400 pb-1">Evraklar</a>
+                    <a href="iletisim.html" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-full transition shadow-lg shadow-pink-500/30">İletişim</a>
                 </div>
                 </div>
             </div>
