--- a/6-sinif.html
+++ b/6-sinif.html
@@ -113,7 +113,7 @@
                     <a href="5-sinif.html" class="text-gray-400 hover:text-white hover:scale-105 transition">5. Sınıf</a>
                     <a href="6-sinif.html" class="text-teal-400 font-bold border-b-2 border-teal-400 pb-1">6. Sınıf</a>
                     <a href="yapay-zeka.html" class="text-gray-400 hover:text-white hover:scale-105 transition">Yapay Zekâ</a>
-                    <a href="#" class="text-gray-300 hover:text-white hover:scale-105 transition">Robotik Kodlama</a>
+                    <a href="robotik.html" class="text-gray-300 hover:text-white hover:scale-105 transition">Robotik Kodlama</a>
                      <a href="evraklar.html" class="text-gray-300 hover:text-white hover:scale-105 transition">Evraklar</a>
                     <a href="iletisim.html" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-full transition shadow-lg shadow-pink-500/30">İletişim</a>
                 </div>
