--- a/yapay-zeka.html
+++ b/yapay-zeka.html
@@ -82,6 +82,16 @@
                 </div>
             </div>
         </div>
+        <!-- Mobil Menü -->
+        <div id="mobile-menu" class="hidden glass-header border-t border-gray-700">
+            <a href="index.html" class="block py-3 px-4 text-pink-400 font-medium">Anasayfa</a>
+            <a href="5-sinif.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">5. Sınıf BTY</a>
+            <a href="6-sinif.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">6. Sınıf BTY</a>
+            <a href="yapay-zeka.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">Yapay Zekâ</a>
+            <a href="robotik.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">Robotik Kodlama</a>
+            <a href="evraklar.html" class="block py-3 px-4 text-gray-300 hover:text-white transition">Evraklar</a>
+            <a href="iletisim.html" class="block py-3 px-4 bg-pink-600 hover:bg-pink-500 text-white text-center rounded-b-lg transition">İletişim</a>
+        </div>
     </nav>
 
     <!-- Header -->
