--- a/5-sinif.html
+++ b/5-sinif.html
@@ -158,7 +158,7 @@
                 <div class="mb-4">
                     <select onchange="showContent('tema1', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
                         <option value="" selected disabled>Konu Başlığı Seçiniz...</option>
-                        <option value="t1-k1">1. Bilişim Teknolojilerini Sınıflandırma</option>
+                        <option value="t1-k1">1. Bilişim Teknolojilerine Giriş</option>
                         <option value="t1-k2">2. BT'nin Etkileri ve Sağlık</option>
                         <option value="t1-k3">3. Dijital Vatandaşlık</option>
                         <option value="t1-k4">4. Yapay Zekâ Temel Kavramlar</option>
@@ -173,10 +173,11 @@
                     
                     <!-- Konu 1 -->
                     <div id="t1-k1" class="content-panel">
-                        <a href="https://drive.google.com/..." target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Ders Sunusu (PDF)</span></a>
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Bilişim Araçları Posteri</span></a>
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-clipboard-question text-green-400 w-8 text-center"></i><span class="text-sm">Kazanım Testi</span></a>
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Konu Anlatım Videosu</span></a>
+                        <a href="https://drive.google.com/file/d/1QllEDo47BChF_9fl5d-4NYIFmD97E6RZ/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Bilişim Dünyası</span></a>
+                        <a href="https://drive.google.com/file/d/1ho0Nwgvw_uU7LzUqKNHUp2bN5ufTeUR9/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Bilişim Nedir?</span></a>
+                        <a href="https://drive.google.com/file/d/1C4_4Iq1qsGDjNgQCqQH44qI-DojoU7MZ/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Bilişim Dünyasının 5 Anahtarı</span></a>
+                        <a href="https://drive.google.com/file/d/1yrLG1PWDOdYO8cchfDl6cnVblQ3x2dit/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Bit Bileşenleri</span></a>
+                        <a href="https://youtu.be/rzhd3dpLysg?si=T-W7WB9PksRyXHQl" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Bilişim Dünyasına Yolculuk</span></a>
                     </div>
                     <!-- Konu 2 -->
                     <div id="t1-k2" class="content-panel">
