--- a/5-sinif.html
+++ b/5-sinif.html
@@ -219,12 +219,11 @@
                     <select onchange="showContent('tema2', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
                         <option value="" selected disabled>Konu Başlığı Seçiniz...</option>
                         <option value="t2-k1">1. Görsel Düzenleme Programları</option>
-                        <option value="t2-k2">2. Görsel Kurgu Oluşturma</option>
-                        <option value="t2-k3">3. Görsel Dosyası Geliştirme</option>
-                        <option value="t2-k4">4. Kelime İşlemci Programları</option>
-                        <option value="t2-k5">5. Kelime İşlemci Dosyası Geliştirme</option>
-                        <option value="t2-k6">6. Sunum Programları</option>
-                        <option value="t2-k7">7. Sunum Dosyası Geliştirme</option>
+                        <option value="t2-k2">2. Tasarım Kurgusu ve Ürün Oluşturma</option>
+                        <option value="t2-k3">3. Kelime İşlemci Programları</option>
+                        <option value="t2-k4">4. Kelime İşlemci ile Belge Geliştirme</option>
+                        <option value="t2-k5">5. Sunum Programları</option>
+                        <option value="t2-k6">6. Sunum Dosyası Geliştirme</option>
                     </select>
                 </div>
 
@@ -232,8 +231,10 @@
                     <p class="text-gray-500 text-sm italic text-center py-4 opacity-50">Henüz bir konu seçilmedi.</p>
                     
                     <div id="t2-k1" class="content-panel">
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Canva Kullanım Rehberi</span></a>
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Piksel ve Vektör Farkı</span></a>
+                         <a href="https://drive.google.com/file/d/1x-J3W6fyFQ5JYBph0zlqCtClt0j2QXr7/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Dijital Tasarımın Temelleri</span></a>
+                        <a href="https://drive.google.com/file/d/1AGzBm9pYBKDiBcm-kzxr-JUPB8A440BX/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Resim Çizim Fotoğraf</span></a>
+                        <a href="https://drive.google.com/file/d/17Vqm8nivG9MZMcRc6G6976HNut0s7xaW/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Vektör mü Piksel mİ?</span></a>
+                        <a href="https://youtu.be/O9P-XT2JjlI" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Görsel Düzenleme Programlarına Giriş</span></a>
                     </div>
                     <div id="t2-k2" class="content-panel">
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-palette text-purple-400 w-8 text-center"></i><span class="text-sm">Tasarım İlkeleri (Görsel)</span></a>
@@ -251,10 +252,6 @@
                     <div id="t2-k6" class="content-panel">
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Etkili Sunum Teknikleri</span></a>
                     </div>
-                    <div id="t2-k7" class="content-panel">
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-download text-green-400 w-8 text-center"></i><span class="text-sm">Sunum Şablonu İndir</span></a>
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Animasyon Ekleme Dersi</span></a>
-                    </div>
                 </div>
             </div>
 
@@ -270,8 +267,8 @@
                     <select onchange="showContent('tema3', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
                         <option value="" selected disabled>Konu Başlığı Seçiniz...</option>
                         <option value="t3-k1">1. Bilgisayar Ağları ve Bileşenleri</option>
-                        <option value="t3-k2">2. Ağ Bağlantı Yöntemleri</option>
-                        <option value="t3-k3">3. İnternet ile Çalışma</option>
+                        <option value="t3-k2">2. Bağlanma Yöntemleri ve Ağ Türleri</option>
+                        <option value="t3-k3">3. İnternette Bilgi Arama ve Doğrulukk</option>
                     </select>
                 </div>
 
@@ -303,8 +300,8 @@
                 <div class="mb-4">
                     <select onchange="showContent('tema4', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
                         <option value="" selected disabled>Konu Başlığı Seçiniz...</option>
-                        <option value="t4-k1">1. Bilişim Etiği Kural ve İlkeleri</option>
-                        <option value="t4-k2">2. Dijital Gizlilik ve Güvenlik</option>
+                        <option value="t4-k1">1. Bilişim Etiği</option>
+                        <option value="t4-k2">2. Siberr Güvenlik ve Güvenlik</option>
                     </select>
                 </div>
 
@@ -332,9 +329,10 @@
                 <div class="mb-4">
                     <select onchange="showContent('tema5', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
                         <option value="" selected disabled>Konu Başlığı Seçiniz...</option>
-                        <option value="t5-k1">1. Yapay Zekâ Uygulamaları</option>
-                        <option value="t5-k2">2. YZ'de Etik ve Güvenlik</option>
-                        <option value="t5-k3">3. YZ ile Model Geliştirme</option>
+                        <option value="t5-k1">1. Yapay Zeka Uygulamaları</option>
+                        <option value="t5-k2">2. Yapay Zeka Nasıl Çalışır</option>
+                        <option value="t5-k3">3. Yapay Zekada Etik ve Güvenlik</option>
+                        <option value="t5-k4">4. Yapay Zekanın Değerlendirilmesi</option>
                     </select>
                 </div>
 
@@ -348,6 +346,9 @@
                     </div>
                     <div id="t5-k3" class="content-panel">
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-project-diagram text-orange-400 w-8 text-center"></i><span class="text-sm">Model Eğitimi Uygulaması</span></a>
+                    </div>
+                    <div id="t5-k4" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-chart-line text-indigo-400 w-8 text-center"></i><span class="text-sm">Yapay Zekanın Değerlendirilmesi</span></a>
                     </div>
                 </div>
             </div>
@@ -363,10 +364,18 @@
                 <div class="mb-4">
                     <select onchange="showContent('tema6', this.value)" class="w-full p-3 rounded-lg cursor-pointer hover:bg-slate-800 transition shadow-inner">
                         <option value="" selected disabled>Konu Başlığı Seçiniz...</option>
-                        <option value="t6-k1">1. Algoritmik Düşünme</option>
-                        <option value="t6-k2">2. Test ve Hata Ayıklama</option>
-                        <option value="t6-k3">3. Yazılım Geliştirme Bileşenleri</option>
-                        <option value="t6-k4">4. Blok Tabanlı Yazılım Yönetimi</option>
+                        <option value="t6-k1">1. Problem Çözme Ve Algoritma</option>
+                        <option value="t6-k2">2. Akış Şemaları</option>
+                        <option value="t6-k3">3. Algoritma Test Etme ve Hata Ayıklama</option>
+                        <option value="t6-k4">4. Blok Tabanlı Kodlama</option>
+                        <option value="t6-k5">5. Temel Bileşenler(Sabit, Değişken, Operatör)</option>
+                        <option value="t6-k6">6. Karar Yapıları ve Döngüler</option>
+                        <option value="t6-k7">7. Proje Planlama (Yazılım Geliştirme Süreci)</option>
+                        <option value="t6-k8">8. Proje Tasarımı ve Kodlama (Bölüm 1)</option>
+                        <option value="t6-k9">9. Proje Tasarımı ve Kodlama (Bölüm 2)</option>
+                        <option value="t6-k10">10. Test Etme ve Hata Ayıklama</option>
+                        <option value="t6-k11">11. Proje Sunumu ve Değerlendirme</option>
+                        <option value="t6-k12">12. Yıl Sonu Değerlendirmesi</option>
                     </select>
                 </div>
 
@@ -384,6 +393,30 @@
                     <div id="t6-k4" class="content-panel">
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-puzzle-piece text-yellow-400 w-8 text-center"></i><span class="text-sm">Scratch ile Proje Yapımı</span></a>
                     </div>
+                    <div id="t6-k5" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-tasks text-green-400 w-8 text-center"></i><span class="text-sm">Yazılım Geliştirme Süreci</span></a>
+                    </div>
+                    <div id="t6-k6" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-laptop-code text-indigo-400 w-8 text-center"></i><span class="text-sm">Proje Kodlama Rehberi</span></a>
+                    </div>
+                    <div id="t6-k7" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-vial text-purple-400 w-8 text-center"></i><span class="text-sm">Test Etme Teknikleri</span></a>
+                    </div> 
+                    <div id="t6-k8" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-chalkboard-user text-pink-400 w-8 text-center"></i><span class="text-sm">Etkili Sunum İpuçları</span></a>
+                    </div> 
+                    <div id="t6-k9" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-star text-yellow-400 w-8 text-center"></i><span class="text-sm">Yıl Sonu Proje Değerlendirmesi</span></a>
+                    </div>
+                    <div id="t6-k10" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-star text-yellow-400 w-8 text-center"></i><span class="text-sm">Yıl Sonu Proje Değerlendirmesi</span></a>
+                    </div>
+                    <div id="t6-k11" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-star text-yellow-400 w-8 text-center"></i><span class="text-sm">Yıl Sonu Proje Değerlendirmesi</span></a>
+                    </div>
+                    <div id="t6-k12" class="content-panel">
+                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-star text-yellow-400 w-8 text-center"></i><span class="text-sm">Yıl Sonu Proje Değerlendirmesi</span></a>
+                    </div>  
                 </div>
             </div>
 
@@ -393,7 +426,7 @@
 
     <!-- Footer -->
     <footer class="glass-header mt-auto py-8 text-center text-gray-400 text-sm">
-        <p>&copy; 2024 Keskin Bilişim BTY. Geleceği Kodlayanların Adresi.</p>
+        <p>&copy; 2025 Keskin Bilişim BTY. Geleceği Kodlayanların Adresi.</p>
     </footer>
 
     <!-- JavaScript - BASİTLEŞTİRİLMİŞ GARANTİ ÇÖZÜM -->
