--- a/5-sinif.html
+++ b/5-sinif.html
@@ -231,13 +231,18 @@
                     <p class="text-gray-500 text-sm italic text-center py-4 opacity-50">Henüz bir konu seçilmedi.</p>
                     
                     <div id="t2-k1" class="content-panel">
-                         <a href="https://drive.google.com/file/d/1x-J3W6fyFQ5JYBph0zlqCtClt0j2QXr7/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Dijital Tasarımın Temelleri</span></a>
+                        <a href="https://drive.google.com/file/d/1x-J3W6fyFQ5JYBph0zlqCtClt0j2QXr7/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Dijital Tasarımın Temelleri</span></a>
                         <a href="https://drive.google.com/file/d/1AGzBm9pYBKDiBcm-kzxr-JUPB8A440BX/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Resim Çizim Fotoğraf</span></a>
                         <a href="https://drive.google.com/file/d/17Vqm8nivG9MZMcRc6G6976HNut0s7xaW/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Vektör mü Piksel mİ?</span></a>
+                        <a href="https://drive.google.com/file/d/1piE5hHuA3Vsq9W5Bcs_LgJ9_7K6PsJAE/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Paint Arayüzü</span></a>
                         <a href="https://youtu.be/O9P-XT2JjlI" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Görsel Düzenleme Programlarına Giriş</span></a>
                     </div>
                     <div id="t2-k2" class="content-panel">
-                        <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-palette text-purple-400 w-8 text-center"></i><span class="text-sm">Tasarım İlkeleri (Görsel)</span></a>
+                        <a href="https://drive.google.com/file/d/1gSUMG7KEiRpkdqFIEJ18A1ex_gYUFyVC/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-file-powerpoint text-orange-400 w-8 text-center"></i><span class="text-sm">Bir Tasarım Macerası</span></a>
+                        <a href="https://drive.google.com/file/d/1q2WsuxSHHMKcdxZPBQngFHuN_DrB8EIu/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Bir Görsel Tasarım Hikayesi</span></a>
+                        <a href="https://drive.google.com/file/d/1inDfbCBjwGeLEq11KZlVPq6YhXF85Mtk/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Gerçek Bir Problem Bul</span></a>
+                        <a href="https://drive.google.com/file/d/1inDfbCBjwGeLEq11KZlVPq6YhXF85Mtk/view?usp=sharing" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Dijital Nezaket Kuralları</span></a>
+                        <a href="https://youtu.be/AeOlVzFOgg4" target="_blank" class="resource-link"><i class="fa-brands fa-youtube text-red-400 w-8 text-center"></i><span class="text-sm">Amaca Yönelik Tasarım</span></a>
                     </div>
                     <div id="t2-k3" class="content-panel">
                         <a href="#" target="_blank" class="resource-link"><i class="fa-solid fa-image text-purple-400 w-8 text-center"></i><span class="text-sm">Örnek Afiş Çalışmaları</span></a>
